fix: improve grid gap and font size on mobile

--- a/ui-components/src/blocks/ImageCard.scss
+++ b/ui-components/src/blocks/ImageCard.scss
@@ -7,6 +7,8 @@
   --image-height: auto;
   --tags-justify-mobile: center;
   --tags-justify-desktop: flex-start;
+  --grid-gap-mobile: var(--bloom-s2);
+  --grid-gap-desktop: var(--bloom-s4);
 
   position: relative;
 }
@@ -24,11 +26,17 @@
   }
 
   &.has-grid-layout {
+    --grid-gap: var(--grid-gap-desktop);
+
+    @media (max-width: $screen-sm) {
+      --grid-gap: var(--grid-gap-mobile);
+    }
+
     background-color: transparent;
     display: grid;
     grid-template-columns: 1.3fr 0.7fr;
     grid-template-rows: 1fr 1fr;
-    gap: 1rem;
+    gap: var(--grid-gap);
 
     &.has-2-images {
       grid-template-columns: 1.2fr 0.8fr;
@@ -90,12 +98,21 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+
+      @media (max-width: $screen-sm) {
+        font-size: var(--bloom-font-size-sm);
+        line-height: var(--bloom-line-height-none);
+      }
     }
   }
 }
 
 .image-card-tag__wrapper {
   --tags-justify: var(--tags-justify-mobile);
+
+  @media (min-width: $screen-sm) {
+    --tags-justify: var(--tags-justify-desktop);
+  }
 
   display: flex;
   align-items: center;
@@ -107,10 +124,6 @@
   padding-inline: var(--bloom-s4);
   flex-wrap: wrap;
   max-width: 100%;
-
-  @media (min-width: $screen-sm) {
-    --tags-justify: var(--tags-justify-desktop);
-  }
 
   .tag {
     margin-top: var(--bloom-s3);
